Adjusted header to use sticky positioning and increased top margin for all pages to prevent content overlap.

--- a/src/NammaTeaKada/Home.css
+++ b/src/NammaTeaKada/Home.css
@@ -63,7 +63,7 @@ main{
     font-size: 10px;
   }
   .cta-buttons {
-    margin: 0 auto;
+    margin: auto;
     flex-direction: column;
     gap: 1rem;
     width: 100%;
@@ -168,8 +168,8 @@ main{
 .cta-buttons{
   display: flex;
   gap: 1rem;
-  margin: 0 auto;
-  justify-content: center;
+  margin-left: 130px ;
+  /* justify-content: center; */
   margin-top: 30px;
   background-color: black;
   color: white;
